--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -6,18 +6,18 @@
 #    By: elias <elias@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/16 17:08:00 by elias             #+#    #+#              #
-#    Updated: 2023/06/02 13:20:05 by elias            ###   ########.fr        #
+#    Updated: 2023/09/18 13:41:16 by elias            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-S_SRC		= main.cpp				\
-			Bureaucrat.class.cpp	\
+S_SRC		= main.cpp			\
+			ScalarConverter.cpp	\
 
 S_TMP		= ${addprefix ${D_SRC}, ${S_SRC}}
 O_SRC		= $(patsubst %.cpp, ${D_OBJS}%.o, $(S_TMP))
 
 # VARIABLES
-NAME		= bureaucrat
+NAME		= scalarConverter
 CC			= c++ -std=c++98
 
 # FLAGS
